--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vueuse/components": "^9.4.0",
+    "@vueuse/core": "^9.4.0",
     "pinia": "^2.0.23",
+    "sass": "^1.55.0",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
