--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@vueuse/components": "^9.4.0",
     "@vueuse/core": "^9.4.0",
+    "gsap": "^3.11.3",
     "pinia": "^2.0.23",
     "sass": "^1.55.0",
     "vue": "^3.2.41",
