--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gsap": "^3.11.3",
     "pinia": "^2.0.23",
     "sass": "^1.55.0",
+    "serve": "^14.1.1",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
